--- a/class-07-oop-constructors-tables/demo-constructors/index.html
+++ b/class-07-oop-constructors-tables/demo-constructors/index.html
@@ -8,7 +8,7 @@
 
   <body>
     <h1>Tuesday 7/26, Constructors Demo</h1>
-    <ul id="students">List of Students</ul>
+    <ol id="students">List of Students</ul>
     <script src="app.js"></script>
   </body>
 </html>
